--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -43,9 +43,11 @@
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
             </li>
+            {% if request.user.is_staff %}
             <li class="nav-item">
-              <a class="nav-link" href="#">Produtos</a>
+              <a class="nav-link" href="{% url 'products' %}">Produtos</a>
             </li>
+            {% endif %}
           </ul>
         </div>
         {% if request.user.is_authenticated %}
