--- a/home/templates/home/user-home.html
+++ b/home/templates/home/user-home.html
@@ -46,9 +46,12 @@
 
 </div>
 
+
 <div class="row">
 	<div class="col-md">
 		<div class="card card-body">
+            <a class="btn btn-primary btn-sm btn-block" style="width: 150px" href="{% url 'solicitar-pedido' %}"><strong>SOLICITAR PEDIDO</strong></a>
+            <br>
 			<table class="table table-sm">
 				<tr>
 					<th>Produto</th>
@@ -58,12 +61,14 @@
 				</tr>
 
 				{% for order in customer_orders %}
-				<tr>
-					<td>{{ order }}</td>
-					<td></td>
-					<td>{{ order.data }}</td>
-					<td>{{ order.status }}</td>
-				</tr>
+                    
+                        <tr>
+                            <td>{{ order }}</td>
+                            <td>{{ order.produto.get_categoria_display }}</td>
+                            <td>{{ order.data }}</td>
+                            <td>{{ order.status }}</td>
+                        </tr>
+                    
 				{% empty %}
 				<tr>
 					<td colspan="6" ><center>Nenhum produto registrado.</center></td>
