--- a/pedidos/templates/pedidos/deletar-pedido.html
+++ b/pedidos/templates/pedidos/deletar-pedido.html
@@ -7,7 +7,7 @@
     <div class="col-md-6">
         <div class="card card-body">
 
-            <p>Você realmente deseja excluir o produto: <strong>{{ order }}</strong>?</p>
+            <p>Você realmente deseja excluir o produto: <strong>{{ object }}</strong>?</p>
 
             <form action="" method="POST">
 
